--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "pixi-js-demo",
-  "version": "1.0.0",
-  "license": "MIT",
+  "name": "pixijs-demo",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "parcel serve ./index.html"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "parcel": "^2.0.0-beta.1"
+    "typescript": "~5.7.2",
+    "vite": "^6.0.7"
   },
   "dependencies": {
-    "gsap": "^3.5.1",
-    "pixi.js": "^5.3.3"
+    "gsap": "^3.12.5",
+    "pixi.js": "^8.6.6"
   }
 }
